fixing whitespace issue in results page

--- a/src/App.css
+++ b/src/App.css
@@ -299,6 +299,16 @@
     height: 50%;
   }
 
+  .results-card-body{
+    display: flex;
+    flex: 1 1 auto;
+    flex-direction: column;
+    padding: var(--padding-card, 2rem);
+    gap: 0.5rem;
+    height: 70vh;
+    overflow-y: scroll;
+  }
+
 @keyframes gradient {
 	0% {
 		background-position: 0% 50%;
